Fix View post arrow unaligned

--- a/src/app.css
+++ b/src/app.css
@@ -748,6 +748,8 @@ header {
 
     position: relative;
     .post-quote-view-action {
+      display: flex;
+      gap: calc(var(--spacing) / 2);
       position: absolute;
       top: var(--spacing);
       right: var(--spacing);
